added comments and descriptions

--- a/concept_tests/outlines.ipynb
+++ b/concept_tests/outlines.ipynb
@@ -12,36 +12,39 @@
    "metadata": {},
    "source": [
     "https://github.com/outlines-dev/outlines \\\n",
-    "https://outlines-dev.github.io/outlines/\n",
-    "\n",
-    "llama_cpp i class Llama create_completion(max_token=16, temperature = 0.8, echo=False, ...) https://github.com/abetlen/llama-cpp-python/blob/2138561fab5e60672c63b6c446b62a8bc26e17c4/llama_cpp/llama.py#L1431"
+    "https://outlines-dev.github.io/outlines/"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# content\n",
+    "### CONTENT:\n",
+    "Investigation of Outlines for extraction of structured output from text such as scientific articles.\n",
     "\n",
     "* model_mistral_Q6 is mistral-7b-instruct-v0.2.Q6_K.gguf\n",
     "* model_mistral is mistralai/Mistral-7B-v0.1\n",
     "* model_phi3 is Phi-3-mini-128k-instruct\n",
-    "* model_phi_Q4 is Phi-3-mini-4k-instruct-q4.gguf\n",
     "\n",
-    "NOTE: for correct generation with mistral-7b-instruct-v0.2.Q6_K.gguf need:\n",
-    "* in generate.json(whitespace_pattern=\"\") - to help smaller LLMs\n",
-    "* in generator(max_tokens=1000) - so json is not intrupted before fully generated\n",
+    "### RESULTS/COMMENTS:\n",
+    "* description for each field is needed in prompt. Just a general instruction to the model results in halucinated results.\n",
+    "* compatible with Pydantic\n",
+    "* unstable output even for low temperature, seldomly perfect output\n",
+    "* output ~25 s basen on front page of article and 1min - 2 min 30 s basen on full article for model_mistral_Q6\n",
+    "* simple query syntax\n",
+    "* well maintained\n",
+    "* for correct generation with mistral-7b-instruct-v0.2.Q6_K.gguf need:\n",
+    "    * in generate.json(whitespace_pattern=\"\") - to help smaller LLMs\n",
+    "    * in generator(max_tokens=1000) - so json is not intrupted before fully generated; llama_cpp i class Llama create_completion(max_token=16, temperature = 0.8, echo=False, ...) https://github.com/abetlen/llama-cpp-python/blob/2138561fab5e60672c63b6c446b62a8bc26e17c4/llama_cpp/llama.py#L1431\n",
+    "* default temperature is 0.8 with llama-cpp-python unless other is stated\n",
     "\n",
-    "NOTE: default temperature is 0.8 with llama-cpp-python unless other is stated\n",
-    "\n",
-    "# conclusions\n",
     "---\n",
     "---\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,11 +71,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/dorota/LLM-diploma-project/venv/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "Loading checkpoint shards: 100%|██████████| 2/2 [00:02<00:00,  1.07s/it]\n"
+     ]
+    }
+   ],
    "source": [
-    "model_mistral = models.transformers(\"mistralai/Mistral-7B-v0.1\", device='auto')"
+    "model_mistral = models.transformers(\"mistralai/Mistral-7B-v0.1\")#, device='auto')"
    ]
   },
   {
@@ -88,16 +101,6 @@
     "llm = AutoModelForCausalLM.from_pretrained(\"microsoft/Phi-3-mini-128k-instruct\", device_map='auto', trust_remote_code=True, max_memory = max_memory_mapping)\n",
     "tokenizer = AutoTokenizer.from_pretrained(\"microsoft/Phi-3-mini-128k-instruct\")\n",
     "model_phi3 = models.Transformers(llm, tokenizer)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "llm = Llama(\"/home/dorota/models/Phi-3-mini-4k-instruct-q4.gguf\", n_gpu_layers=10, n_ctx=0, verbose=True)\n",
-    "model_mistral_Q6 = models.LlamaCpp(llm) "
    ]
   },
   {
@@ -140,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,8 +472,8 @@
     "    \"\"\"\n",
     "\n",
     "prompt = get_metadata(TEXT)\n",
-    "generator = outlines.generate.json(model_mistral_Q6, json.dumps(Metadata.model_json_schema()), whitespace_pattern=\"\")\n",
-    "result = generator(prompt, max_tokens=5000, temperature = 0.1) # type result is dict\n",
+    "generator = outlines.generate.json(model_mistral, json.dumps(Metadata.model_json_schema()), whitespace_pattern=\"\")\n",
+    "result = generator(prompt, max_tokens=5000)# , temperature = 0.1) # type result is dict\n",
     "\n",
     "result_pydantic = Metadata(**result)\n",
     "result_pydantic.model_dump()\n",
@@ -535,14 +538,19 @@
     "\n",
     "\n",
     "# -----------------------------------------------------------------------------------------------------------------\n",
-    "# NOTE: model_mistral, TEXT is only front page -> CUDA out of memory (halucinating?)\n",
+    "# NOTE: model_mistral, TEXT is only front page -> CUDA out of memory (halucinating?) OK on CPU\n",
+    "# {'title': 'Xu\\xa0et\\xa0al.  European  Journal of Medical Research ',\n",
+    "#  'authors': ['Xiaoyan  Gao','Hongyan Wang','Lining Gao','Junping Yang','Chunguang  Wu'],\n",
+    "#  'pub_year': 2023,\n",
+    "#  'key_words': ['European  Journal of Medical Research','bibliometric analysis',  'medicine','bibliometrics',' federative  literature databases'],\n",
+    "#  'summary': 'Article is delimited by  \\\\\\\\n\\\\\\\\n\\\\\\\\n\\\\\\\\n\\\\\\\\n\\\\\\\\n\\\\\\\\n\\\\\\\\nBreast cancer,  as a daunting global health threat,\\\\[more] ',\n",
+    "#  'research_area': '',\n",
+    "#  'quality': <QualityEnum.bad: 'BAD'>,\n",
+    "#  'quality_reason': 'Passive voice count - 34\\\\nI'}\n",
     "\n",
     "#------------------------------------------------------------------------------------------------------------------\n",
     "# NOTE: model_phi3, TEXT is only front page -> CUDA out of memory (halucinating?)\n",
-    "\n",
-    "#------------------------------------------------------------------------------------------------------------------\n",
-    "# NOTE: model_phi3_Q4, TEXT is only front page ?????????????????????????????????????????????????????????\n",
-    "#\n"
+    "\n"
    ]
   },
   {
