added comment on GuidancePydandicProgram and json being truncated

--- a/concept_tests/llamaindex_extractors.ipynb
+++ b/concept_tests/llamaindex_extractors.ipynb
@@ -16,7 +16,7 @@
     "* Predefined Metadata Extractor modules work fairly well but the process is very slow\n",
     "* Custom Metadata Extractor modules can be crated. This has not been investigated in current notebook.\n",
     "* Pydantic Extractor seems to work well with OpenAIPydanticProgram, however swiching to the local GuidancePydanticProgram breaks the pipline (https://github.com/run-llama/llama_index/issues/9914)\n",
-    "* GuidancePydanticProgram without the pipeline dones not output structured enough data:  OutputParserException: Failed to parse pydantic object from guidance program. Probably the LLM failed to produce data with right json schema\n",
+    "* GuidancePydanticProgram without the pipeline dones not output structured enough data:  OutputParserException: Failed to parse pydantic object from guidance program. Probably the LLM failed to produce data with right json schema. Most probably caused by truncation of output. max_len och max_tokens should be set higher, this was however not investigated in the current notebook.\n",
     "\n",
     "* NOTE: version for llama-cpp-python was upgraded to latest when installing llama-index-llms-llama-cpp. Latest version might give unstable output for {Guidance}. Stable output with llama-cpp-python==0.2.26\n",
     "* llama-cpp-python with GPU:\\\n",
