added comments on GuidancePydanticProgram and json being truncated, and versions for llama-cpp-python and guidance

--- a/concept_tests/guidance.ipynb
+++ b/concept_tests/guidance.ipynb
@@ -15,9 +15,9 @@
    "metadata": {},
    "source": [
     "---\n",
-    "CONCLUSIONS:\n",
-    "* Llama-index guidance pydantic program dicarded due to LLM not outputting correct json schema even with mixtral. # -> OutputParserException: Failed to parse pydantic object from guidance program. Probably the LLM failed to produce data with right json schema\n",
-    "* Extract data to json works well for select from a list of choices and generation funcion with llama-cpp-python==0.2.26\n",
+    "CONCLUSIONS/COMMENTS:\n",
+    "* Llama-index guidance pydantic program dicarded due to LLM not outputting correct json schema even with mixtral. # -> OutputParserException: Failed to parse pydantic object from guidance program. Probably the LLM failed to produce data with right json schema. Most probably caused by truncation of output. max_len och max_tokens should be set higher, this was however not investigated in the current notebook.\n",
+    "* Extract data to json works well for select from a list of choices and generation funcion with llama-cpp-python==0.2.26 for guidance 0.1.13. However for Guidance 0.1.14 llama-cpp-python 0.2.62 can be used with good results.\n",
     "* Content of the generated output from longer text or scientific article good quality. Not all instructions in prompt are followed. Output can possibly be improved with prompting: propmpt engineering, chain-of-thought, few-shot examples.\n",
     "---"
    ]
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,9 +83,8 @@
     "        \"Generate a bookshelf with 3 books within a genre with an author, a title and a publication year. Using\"\n",
     "        \" genre '{{query_str}}' as inspiration. Parse output as json\"\n",
     "    ),\n",
-    "    guidance_llm=mixtral,\n",
+    "    guidance_llm=lm,\n",
     "    verbose=True,\n",
-    "\n",
     ")"
    ]
   },
@@ -641,20 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import guidance\n",
-    "from guidance import models, gen, select\n",
-    "import json\n",
-    "\n",
-    "lm = guidance.models.LlamaCpp(\"/home/dorota/models/mistral-7b-instruct-v0.2.Q6_K.gguf\", n_gpu_layers=-1, n_ctx=0, echo=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -800,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -810,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -927,7 +913,7 @@
     "model_output = lm + get_metadata(TEXT, NodeMetadata)\n",
     "output_to_pydantic(NodeMetadata, model_output).model_dump() # model_dump() for visualization\n",
     "\n",
-    "# Output in pydantic in accordance to the query pydantic model: \n",
+    "# Output in pydantic in accordance to the query pydantic model (TEXT is front page only or the full article): \n",
     "# {'title': 'Visualization of breast cancer -related protein synthesis from the perspective of bibliometric analysis',\n",
     "#  'authors': 'Jiawei Xu, Chengdong Yu, Xiaoqiang Zeng, Weifeng Tang, Siyi Xu, Lei Tang, Yanxiao Huang, Zhengkui Sun, Tenghua Yu',\n",
     "#  'pub_year': 2023,\n",
@@ -936,6 +922,14 @@
     "#  'research_area': 'Breast cancer research, specifically the relationship between protein expression and breast cancer development and treatment, is a growing area of interest in the scientific community.',\n",
     "#  'quality': 'GOOD',\n",
     "#  'quality_reason': 'The article provides a comprehensive bibliometric analysis of research on breast cancer and protein synthesis, using reliable data sources and rigorous analysis methods.'}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "---"
    ]
   },
   {
