exploration and script to output guidance result to sqlite

--- a/concept_tests/SQLight/guidance_to_sqlight.ipynb
+++ b/concept_tests/SQLight/guidance_to_sqlight.ipynb
@@ -65,9 +65,7 @@
     "   measuring_function TEXT,\n",
     "   trained_professional_user TEXT);\n",
     "\"\"\")\n",
-    "conn.commit()\n",
-    "\n",
-    "#?????????? kan detta göras mindre hårdkodat????????????"
+    "conn.commit()"
    ]
   },
   {
@@ -79,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,20 +93,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ggml_cuda_init: GGML_CUDA_FORCE_MMQ:   no\n",
-      "ggml_cuda_init: CUDA_USE_TENSOR_CORES: yes\n",
-      "ggml_cuda_init: found 1 CUDA devices:\n",
-      "  Device 0: NVIDIA GeForce RTX 4070 Ti, compute capability 8.9, VMM: yes\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import guidance\n",
     "from guidance import models, gen, select\n",
@@ -129,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,31 +218,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('WO2014076653A1',\n",
-       " 1715775413.4303,\n",
-       " 'A twist drill and bone tap for assessing jaw bone quality during implantation procedures, each having a shank with a proximal section and a distal section, a mounting portion formed in the proximal section for connecting with a torque monitoring device, and a cutting portion with at least one helical flute or thread for generating a measurable torque as a function of the bone material being drilled or tapped.',\n",
-       " 'Twist drill, Bone tap, Torque monitoring, Helical flute, Measurable torque',\n",
-       " 'MEDIUM',\n",
-       " 'The invention involves a twist drill and bone tap for assessing jaw bone quality during implantation procedures, which is a common practice in dentistry, but the novelty lies in the use of a shank with a proximal section and a distal section, a mounting portion formed in the proximal section for connecting with a torque monitoring device, and a cutting portion with at least one helical flute or thread for generating a measurable torque as a function of the bone material being drilled or tapped, which allows for objective and quantitative assessment of bone quality.',\n",
-       " 'Dental devices',\n",
-       " 'yes',\n",
-       " 'yes',\n",
-       " 'yes',\n",
-       " 'yes',\n",
-       " 'yes')"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from datetime import datetime\n",
     "\n",
@@ -277,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,131 +274,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>patentid</th>\n",
-       "      <th>timestamp</th>\n",
-       "      <th>summary</th>\n",
-       "      <th>key_technological_field</th>\n",
-       "      <th>novelty_level</th>\n",
-       "      <th>novelty_level_reason</th>\n",
-       "      <th>medical_device_category</th>\n",
-       "      <th>invasive</th>\n",
-       "      <th>active</th>\n",
-       "      <th>software</th>\n",
-       "      <th>measuring_function</th>\n",
-       "      <th>trained_professional_user</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>WO2014076653A1</td>\n",
-       "      <td>1.715777e+09</td>\n",
-       "      <td>A twist drill and bone tap for assessing jaw b...</td>\n",
-       "      <td>Twist drill, Bone tap, Torque monitoring, Heli...</td>\n",
-       "      <td>MEDIUM</td>\n",
-       "      <td>The invention involves a twist drill and bone ...</td>\n",
-       "      <td>Dental devices</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>EP3925641A1</td>\n",
-       "      <td>1.715777e+09</td>\n",
-       "      <td>An irrigation system for rectal irrigation com...</td>\n",
-       "      <td>Reusable part, Disposable part, Protective cov...</td>\n",
-       "      <td>MEDIUM</td>\n",
-       "      <td>The invention provides a new design for an irr...</td>\n",
-       "      <td>Gastroenterology-urology devices</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>no</td>\n",
-       "      <td>no</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>EP2783724A1</td>\n",
-       "      <td>1.715779e+09</td>\n",
-       "      <td>A coupling device for a tubular arrangement fo...</td>\n",
-       "      <td>Guiding edge, Engagement/disengagement member,...</td>\n",
-       "      <td>MEDIUM</td>\n",
-       "      <td>The invention provides a coupling device for m...</td>\n",
-       "      <td>Gastroenterology-urology devices</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>yes</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         patentid     timestamp  \\\n",
-       "0  WO2014076653A1  1.715777e+09   \n",
-       "1     EP3925641A1  1.715777e+09   \n",
-       "2     EP2783724A1  1.715779e+09   \n",
-       "\n",
-       "                                             summary  \\\n",
-       "0  A twist drill and bone tap for assessing jaw b...   \n",
-       "1  An irrigation system for rectal irrigation com...   \n",
-       "2  A coupling device for a tubular arrangement fo...   \n",
-       "\n",
-       "                             key_technological_field novelty_level  \\\n",
-       "0  Twist drill, Bone tap, Torque monitoring, Heli...        MEDIUM   \n",
-       "1  Reusable part, Disposable part, Protective cov...        MEDIUM   \n",
-       "2  Guiding edge, Engagement/disengagement member,...        MEDIUM   \n",
-       "\n",
-       "                                novelty_level_reason  \\\n",
-       "0  The invention involves a twist drill and bone ...   \n",
-       "1  The invention provides a new design for an irr...   \n",
-       "2  The invention provides a coupling device for m...   \n",
-       "\n",
-       "            medical_device_category invasive active software  \\\n",
-       "0                    Dental devices      yes    yes      yes   \n",
-       "1  Gastroenterology-urology devices      yes    yes      yes   \n",
-       "2  Gastroenterology-urology devices      yes    yes      yes   \n",
-       "\n",
-       "  measuring_function trained_professional_user  \n",
-       "0                yes                       yes  \n",
-       "1                 no                        no  \n",
-       "2                yes                       yes  "
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -467,32 +310,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ggml_cuda_init: GGML_CUDA_FORCE_MMQ:   no\n",
-      "ggml_cuda_init: CUDA_USE_TENSOR_CORES: yes\n",
-      "ggml_cuda_init: found 1 CUDA devices:\n",
-      "  Device 0: NVIDIA GeForce RTX 4070 Ti, compute capability 8.9, VMM: yes\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "extracting metadata from WO2014076653A1.pdf\n",
-      "WO2014076653A1 already exists\n",
-      "extracting metadata from EP2783724A1.pdf\n",
-      "done with EP2783724A1.pdf\n",
-      "extracting metadata from EP3925641A1.pdf\n",
-      "EP3925641A1 already exists\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# run all patents in specified folder\n",
     "import sqlite3\n",
