added additional comments

--- a/concept_tests/nodes_w_llamaindex.ipynb
+++ b/concept_tests/nodes_w_llamaindex.ipynb
@@ -26,9 +26,9 @@
     "\n",
     "RESULTS AND COMMENTS:\n",
     "NOTE: very limited investigation!\n",
-    "* article -> documents 21 (1/page) -> 48 sematic nodes : better results with semantic nodes\n",
-    "* patent1 -> documaents 17 (1/page) -> 26 semantic nodes: better results with documents\n",
-    "* patent2 -> documents 47 (1/page) -> 84 semantic nodes: better results with documents\n",
+    "* article -> documents 21 (1/page) -> 48 sematic nodes : better results with semantic nodes for question \"What is the main finding\"\n",
+    "* patent1 -> documaents 17 (1/page) -> 26 semantic nodes: better results with documents for questions \"What is claim 1 and What is the invention\"\n",
+    "* patent2 -> documents 47 (1/page) -> 84 semantic nodes: better results with documents for questions \"What is claim 1 and What is the invention\"\n",
     "\n",
     "* semantic nodes for both article and patent typically start with footnote stating the title/number/page for example \"7 EP 2 671 601 A1 8\" or \"WO 2014/076653 PCT/IB2013/060133\" and another half way through the page. Furhter investigation after cleaning the text and larger sample is needed to draw any conclusions.\n",
     " \n"
